--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-ruma_anchor = "7CNQHU6f1cxCUjkhqCMPN8aEFofREEsVUFsCA72gV6fj"
+ruma = "7CNQHU6f1cxCUjkhqCMPN8aEFofREEsVUFsCA72gV6fj"
 
 [registry]
 url = "https://api.apr.dev"
