--- a/programs/ruma/Cargo.toml
+++ b/programs/ruma/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ruma-anchor"
+name = "ruma"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "ruma_anchor"
+name = "ruma"
 
 [features]
 default = []
