--- a/programs/ruma/Cargo.toml
+++ b/programs/ruma/Cargo.toml
@@ -19,3 +19,5 @@ idl-build = ["anchor-lang/idl-build"]
 [dependencies]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
 anchor-spl = { version = "0.30.1", features = ["associated_token", "metadata"] }
+num-derive = "0.4.2"
+num-traits = "0.2.19"
