--- a/Anchor.toml
+++ b/Anchor.toml
@@ -17,4 +17,4 @@ cluster = "Localnet"
 wallet = "ruma-wallet.json"
 
 [scripts]
-test = "bunx ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "bun test --timeout 1000000"
