--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
+    "@metaplex-foundation/mpl-core": "^1.1.1",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-storage-mock": "^0.9.2",
     "anchor-bankrun": "^0.5.0",
     "solana-bankrun": "^0.4.0"
   },
