--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex-foundation/umi-storage-mock": "^0.9.2",
