--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex-foundation/umi-storage-mock": "^0.9.2",
+    "@solana/spl-token": "^0.4.9",
     "anchor-bankrun": "^0.5.0",
     "solana-bankrun": "^0.4.0"
   },
