--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
-  "dependencies": {
+  "devDependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
-    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex-foundation/umi-storage-mock": "^0.9.2",
+    "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
     "@solana/spl-token": "^0.4.9",
-    "anchor-bankrun": "^0.5.0",
-    "solana-bankrun": "^0.4.0"
-  },
-  "devDependencies": {
+    "@solana/web3.js": "^1.95.4",
     "@types/bn.js": "^5.1.0",
     "@types/bun": "^1.1.13",
+    "anchor-bankrun": "^0.5.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^2.6.2",
+    "solana-bankrun": "^0.4.0",
     "typescript": "^4.3.5"
   }
 }
