--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,13 +1,11 @@
 [toolchain]
-anchor_version = "0.30.1"
-solana_version = "1.18.17"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-ruma = "RUMAjHRSEoL4TQB5SZ8KJnxMUui7QzmzzznZU7qPXgn"
+ruma = "E2iAM2RNDLgMAY5jBsr2WiTqL6umZ4wkZhBBvmEBGWJ5"
 
 [registry]
 url = "https://api.apr.dev"
@@ -17,11 +15,4 @@ cluster = "Localnet"
 wallet = "ruma-wallet.json"
 
 [scripts]
-test = "bun test --timeout 1000000"
-
-[test]
-upgradeable = true
-
-[[test.genesis]]
-address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
-program = "tests/fixtures/mpl_token_metadata.so"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
