--- a/programs/ruma/Cargo.toml
+++ b/programs/ruma/Cargo.toml
@@ -14,10 +14,7 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
-anchor-spl = { version = "0.30.1", features = ["associated_token", "metadata", "token_2022"] }
-num-derive = "0.4.2"
-num-traits = "0.2.19"
+anchor-lang = "0.30.1"
