--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
-    "types": ["bun"],
+    "types": ["mocha", "chai"],
     "typeRoots": ["./node_modules/@types"],
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "moduleDetection": "force",
-    "moduleResolution": "bundler",
+    "lib": ["es2015"],
+    "module": "commonjs",
+    "target": "es6",
+    "esModuleInterop": true
   }
 }
