--- a/next-app/.prettierrc
+++ b/next-app/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "printWidth": 80,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
