--- a/next-app/package.json
+++ b/next-app/package.json
@@ -24,13 +24,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-icons": "^5.3.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "prettier": "^2.6.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@iconify/tailwind": "^1.1.3",
