--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "anchor-bankrun": "^0.5.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "prettier": "^2.6.2",
+    "prettier": "^3.3.3",
     "solana-bankrun": "^0.4.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.9"
   }
 }
