--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun run --cwd next-app dev",
     "build": "bun run --cwd next-app build",
     "start": "bun run --cwd next-app start",
-    "lint": "bun run --cwd next-app lint"
+    "lint": "bun run --cwd next-app lint",
+    "local": "solana-test-validator"
   },
   "devDependencies": {
     "@coral-xyz/anchor": "^0.30.1",
