--- a/next-app/.gitignore
+++ b/next-app/.gitignore
@@ -29,8 +29,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env file
+.env
 
 # vercel
 .vercel
@@ -38,3 +38,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# RUMA
+idl/ruma.json
+src/types/ruma.ts
