Add replaceIdl script

--- a/anchor/package.json
+++ b/anchor/package.json
@@ -2,7 +2,8 @@
   "license": "ISC",
   "scripts": {
     "format": "prettier . -w",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "replaceIdl": "cp target/idl/ruma.json ../client/src/idl/ruma.json; cp target/types/ruma.ts ../client/src/types/ruma.ts"
   },
   "devDependencies": {
     "@coral-xyz/anchor": "^0.30.1",
