--- a/anchor/package.json
+++ b/anchor/package.json
@@ -4,7 +4,7 @@
     "format": "prettier . -w",
     "format:check": "prettier . --check",
     "local": "solana-test-validator",
-    "replaceIdl": "mkdir -p ../client/src/idl; cp target/idl/ruma.json ../client/src/idl/ruma.json; cp target/types/ruma.ts ../client/src/types/ruma.ts"
+    "sync": "./sync.sh"
   },
   "devDependencies": {
     "@coral-xyz/anchor": "^0.30.1",
