--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
