--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.4.1",
     "qrcode": "^1.5.4",
     "react": "19.0.0-rc-66855b96-20241106",
