--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
+    "postinstall": "bun install --cwd client; bun install --cwd anchor",
     "prepare": "husky"
   }
 }
