--- a/anchor/package.json
+++ b/anchor/package.json
@@ -4,7 +4,7 @@
     "format": "prettier . -w",
     "format:check": "prettier . --check",
     "local": "solana-test-validator",
-    "sync": "./sync.sh"
+    "sync": "./docs/sync.sh"
   },
   "devDependencies": {
     "@coral-xyz/anchor": "^0.30.1",
